--- a/.github/actions/build-test-publish/action.yml
+++ b/.github/actions/build-test-publish/action.yml
@@ -160,7 +160,7 @@ runs:
 
     -
       name: 🖋 Docker Hub
-      uses: peter-evans/dockerhub-description@v4
+      uses: peter-evans/dockerhub-description@432a30c9e07499fd01da9f8a49f0faf9e0ca5b77
       # Check if the repo has a README.md for publication, and if so update the
       # description on Docker Hub.
       if: ${{ inputs.publish == 'true' && inputs.publish-dockerhub-description == 'true' }}
