--- a/.github/workflows/on-base-change.yml
+++ b/.github/workflows/on-base-change.yml
@@ -32,7 +32,7 @@ jobs:
       -
         name: 📂 - Base Changed?
         id: changes
-        uses: dorny/paths-filter@v3
+        uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36
         with:
           filters: |
             base:
