--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -38,7 +38,7 @@ jobs:
       -
         name: 📂 - Changed Languages?
         id: changes
-        uses: dorny/paths-filter@v3
+        uses: dorny/paths-filter@de90cc6fb38fc0963ad72b210f1f284cd68cea36
         with:
           filters: lang-filters.yml
 
