AI fixes the lolcode build
Gave it some strong hints on checking out an older version of the repo,
I'll never know what approach it would have now thought!

--- a/lolcode/artifacts/Makefile
+++ b/lolcode/artifacts/Makefile
@@ -1,5 +1,5 @@
 install: $(BIN)
-	git clone https://github.com/justinmeza/lci.git
+	git clone --depth 1 --branch v0.11.2 https://github.com/justinmeza/lci.git
 	cd lci && cmake .
 	cd lci && make && make install
 
