Fix wren composite-dockerfile issue
There is some regex/sed magic that coereces the language's Dockerfile
into something that will have proper pathing in the Dockerfile.composite
generation. That magic fell apart because the COPY statement wasn't
quite right in the wren Dockerfile to match the regexes.

--- a/wren/Dockerfile
+++ b/wren/Dockerfile
@@ -1,7 +1,5 @@
 # syntax=docker/dockerfile:1
 # escape=\
-#FROM 100hellos/100-java11:local
-#FROM 100hellos/200-dotnet:local
 FROM 100hellos/000-base:local
 
 # Install build dependencies (git and make are already in base image)
@@ -16,4 +14,4 @@ RUN git clone --depth 1 https://github.com/wren-lang/wren-cli.git /tmp/wren-cli 
     && rm -rf /tmp/wren-cli
 
 # Copy hello world files
-COPY --chown=human:human files/ /hello-world/
+COPY --chown=human:human ./files /hello-world/
