Prolog fragment support!

--- a/prolog/Dockerfile
+++ b/prolog/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 # escape=\
-FROM 100hellos/000-base:local
+FROM 100hellos/001-base:local
 
 RUN sudo \
   apk add --no-cache \
@@ -14,4 +14,4 @@ RUN sudo \
 COPY --chown=human:human ./artifacts /artifacts
 RUN cd /artifacts && make install
 
-COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./files /
