ruby: fragments on rails

--- a/ruby/Dockerfile
+++ b/ruby/Dockerfile
@@ -1,10 +1,10 @@
 # syntax=docker/dockerfile:1
 # escape=\
-FROM 100hellos/000-base:local
+FROM 100hellos/001-base:local
 
 RUN \
   sudo \
   apk add --no-cache \
     ruby-dev
 
-COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./files /
