--- a/lua/Dockerfile
+++ b/lua/Dockerfile
@@ -6,4 +6,5 @@ RUN sudo \
   apk add --no-cache \
     lua5.4
 
-COPY --chown=human:human ./files /
+COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
