--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -6,8 +6,6 @@ RUN sudo \
   apk add \
     python3-dev
 
-COPY --chown=human:human ./files/code /code
-COPY --chown=human:human ./files/code-fragments /code-fragments
-COPY --chown=human:human ./files/how-to.md /how-to.md
-COPY --chown=human:human ./files/agent-help.md /agent-help.md
+COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
 
