--- a/prolog/Dockerfile
+++ b/prolog/Dockerfile
@@ -14,4 +14,5 @@ RUN sudo \
 COPY --chown=human:human ./artifacts /artifacts
 RUN cd /artifacts && make install
 
-COPY --chown=human:human ./files /
+COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
