--- a/.github/workflows/weekly-release.yml
+++ b/.github/workflows/weekly-release.yml
@@ -21,7 +21,7 @@ jobs:
     steps:
       -
         name: 🛒 - Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
 
       -
         name: 📂 - Find All Published Languages
