--- a/.github/workflows/on-base-change.yml
+++ b/.github/workflows/on-base-change.yml
@@ -26,7 +26,7 @@ jobs:
     steps:
       -
         name: 🛒 - Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
 
       # https://github.com/dorny/paths-filter
       -
