--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -25,7 +25,7 @@ jobs:
     steps:
       -
         name: 🛒 - Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
 
       -
         name: 🧠 - Generate Language Filters
@@ -52,7 +52,7 @@ jobs:
     steps:
       -
         name: 🛒 - Checkout
-        uses: actions/checkout@master
+        uses: actions/checkout@1af3b93b6815bc44a9784bd300feb67ff0d1eeb3
 
       -
         name: 🧠 - Validations
