--- a/.github/actions/build-test-publish/action.yml
+++ b/.github/actions/build-test-publish/action.yml
@@ -66,7 +66,7 @@ runs:
       name: 🗝 Log into Dockerhub
       if: ${{ inputs.publish == 'true' }}
       id: login
-      uses: docker/login-action@v3
+      uses: docker/login-action@5e57cd118135c172c3672efd75eb46360885c0ef
       with:
         username:  ${{ inputs.dockerhub-username }}
         password:  ${{ inputs.dockerhub-token }}
@@ -77,21 +77,21 @@ runs:
     # build rails for arm64 on an amd64 machine timed out after 6 hours -- so I'm not convinced I believe that claim.
     -
       name: 🛠 Set up QEMU
-      uses: docker/setup-qemu-action@v3
+      uses: docker/setup-qemu-action@c7c53464625b32c7a7e944ae62b3e17d2b600130
       with:
         image: mirror.gcr.io/tonistiigi/binfmt:latest
         platforms: ${{ inputs.platforms }}
 
     -
       name: 🛠 Set up Docker Buildx
-      uses: docker/setup-buildx-action@v3
+      uses: docker/setup-buildx-action@e468171a9de216ec08956ac3ada2f0791b6bd435
       with:
         platforms: ${{ inputs.platforms }}
 
     # https://github.com/docker/build-push-action
     -
       name: 🔨 + 🔄 - ${{ inputs.display-as }} (${{ inputs.platforms }})
-      uses: docker/build-push-action@v6
+      uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83
       with:
         context: ${{ inputs.docker-context }}
         file: ${{ inputs.dockerfile }}
@@ -119,7 +119,7 @@ runs:
       name: 🐳 Generate Image Metadata
       if: ${{ inputs.publish == 'true' }}
       id: meta
-      uses: docker/metadata-action@v5
+      uses: docker/metadata-action@318604b99e75e41977312d83839a89be02ca4893
       with:
         images: |
           ${{ inputs.docker-image }}
@@ -144,7 +144,7 @@ runs:
     -
       name: 🚀 ${{ inputs.display-as }} (${{ inputs.platforms }})
       if: ${{ inputs.publish == 'true' }}
-      uses: docker/build-push-action@v6
+      uses: docker/build-push-action@263435318d21b8e681c14492fe198d362a7d2c83
       with:
         context: ${{ inputs.docker-context }}
         file: ${{ inputs.dockerfile }}
