The C Programming Language w/ multi-fraglet support

--- a/the-c-programming-language/Dockerfile
+++ b/the-c-programming-language/Dockerfile
@@ -1,9 +1,13 @@
 # syntax=docker/dockerfile:1
 # escape=\
-FROM 100hellos/050-c:local
+FROM 100hellos/001-base:local
 
 RUN sudo \
   apk add --no-cache \
+    linux-headers \
+    gcc \
+    musl-dev \
     bash
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
