--- a/brainfuck/Dockerfile
+++ b/brainfuck/Dockerfile
@@ -1,8 +1,15 @@
 # syntax=docker/dockerfile:1
 # escape=\
-FROM 100hellos/050-c:local
+FROM 100hellos/001-base:local
+
+RUN sudo \
+  apk add --no-cache \
+    linux-headers \
+    gcc \
+    musl-dev
 
 COPY --chown=human:human ./artifacts /artifacts
 RUN cd /artifacts && make install
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
