Java gets more word-filtering capabilities
While building out a fraglet+MCP demonstration, the
"computational-reasoning" of solving wordle with a fluent java interface
needed some improvements. Of course, LLMs today can more or less solve
Wordles via magic -- but this is exact.

--- a/java/Dockerfile
+++ b/java/Dockerfile
@@ -18,4 +18,4 @@ RUN cd /tmp/wordalytica && \
 COPY --chown=human:human ./files /hello-world
 COPY --chown=human:human ./fraglet /
 
-# ENTRYPOINT inherited from 100-java11 (fraglet-entrypoint)
+ENTRYPOINT [ "/fraglet-entrypoint" ]
