Transition to simpler fraglet pattern
We just install the fraglet-entrypoint, but only activate it whereever
it is implemented. Otherwise, we end up breaking some containers down
the dependency chain (for example, scala, arnoldc, and other containers
based on 100-java11)

Also, because we've ripped the entrypoint out -- we can nuke all the
prototype gocode that was left lingering around.

--- a/ruby/Dockerfile
+++ b/ruby/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 # escape=\
-FROM 100hellos/001-base:local
+FROM 100hellos/000-base:local
 
 RUN \
   sudo \
@@ -9,3 +9,5 @@ RUN \
 
 COPY --chown=human:human ./files /hello-world
 COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
