--- a/python/Dockerfile
+++ b/python/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 # escape=\
-FROM 100hellos/001-base:local
+FROM 100hellos/000-base:local
 
 RUN sudo \
   apk add \
@@ -8,4 +8,6 @@ RUN sudo \
 
 COPY --chown=human:human ./files /hello-world
 COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
 
