--- a/the-c-programming-language/Dockerfile
+++ b/the-c-programming-language/Dockerfile
@@ -1,6 +1,6 @@
 # syntax=docker/dockerfile:1
 # escape=\
-FROM 100hellos/001-base:local
+FROM 100hellos/000-base:local
 
 RUN sudo \
   apk add --no-cache \
@@ -11,3 +11,5 @@ RUN sudo \
 
 COPY --chown=human:human ./files /hello-world
 COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
