--- a/.github/workflows/weekly-release.yml
+++ b/.github/workflows/weekly-release.yml
@@ -7,17 +7,27 @@ concurrency:
 
 on:
   schedule:
-    # Run every hour at :37 to check for matching batch files
+    # Run daily at 12:37 UTC (noon)
     # We avoid running directly on the hour because that is when
     # many other workloads run and github advises against it running
     # exactly on the hour.
-    - cron: "37 * * * *"
+    # Using noon instead of midnight avoids day boundary issues with
+    # GHA's scheduling volatility (+/- 90-120 minutes).
+    - cron: "37 12 * * *"
   workflow_dispatch:
     inputs:
       batch_file:
-        description: 'Batch file to build (e.g., mon-00). If not specified, will be determined from current time.'
+        description: 'Batch file to build (e.g., mon). If not specified, will be determined from current day.'
         required: false
-        type: string
+        type: choice
+        options:
+          - 'mon'
+          - 'tue'
+          - 'wed'
+          - 'thu'
+          - 'fri'
+          - 'sat'
+          - 'sun'
 
 jobs:
   what-to-build:
@@ -37,12 +47,11 @@ jobs:
             # Use provided batch file from workflow_dispatch
             BATCH_FILE=".build-batch-${{ inputs.batch_file }}"
           else
-            # Determine batch file from current UTC time
-            # Format: day-hour (e.g., mon-00, wed-12)
-            DAY_NAME=$(date -u +%a | tr '[:upper:]' '[:lower:]' | cut -c1-3)  # mon, wed, fri
-            HOUR=$(date -u +%H)  # Already zero-padded: 00, 01, ..., 12, ...
+            # Determine batch file from current UTC day of week
+            # Format: day (e.g., mon, tue, wed)
+            DAY_NAME=$(date -u +%a | tr '[:upper:]' '[:lower:]' | cut -c1-3)  # mon, tue, wed, thu, fri, sat, sun
 
-            BATCH_FILE=".build-batch-${DAY_NAME}-${HOUR}"
+            BATCH_FILE=".build-batch-${DAY_NAME}"
           fi
 
           if [ ! -f "$BATCH_FILE" ]; then
