Fraglet enable snobol/javascript/typescript
This also resulted in creating some out-of-band gydnc to ensure that we
can create these more efficiently. Also out-of-band, is a "fragletc"
tool that can run fraglet enabled containers via the console (for
validation) -- again accompanied with gydnc.

--- a/javascript/Dockerfile
+++ b/javascript/Dockerfile
@@ -3,3 +3,6 @@
 FROM 100hellos/300-node:local
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
