--- a/snobol4/Dockerfile
+++ b/snobol4/Dockerfile
@@ -25,3 +25,6 @@ RUN cd /tmp && \
     rm -rf /tmp/snobol4-*
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
