Julia + Octave Fragletized

--- a/octave/Dockerfile
+++ b/octave/Dockerfile
@@ -6,4 +6,11 @@ RUN sudo \
   apk add --no-cache \
     octave
 
+# Set environment variables to silence X11/GUI warnings
+ENV DISPLAY=""
+ENV OCTAVE_DISPLAY=""
+
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
