Fragletize: awk, elixir, php

--- a/elixir/Dockerfile
+++ b/elixir/Dockerfile
@@ -7,3 +7,6 @@ RUN sudo \
     elixir
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
