--- a/awk/Dockerfile
+++ b/awk/Dockerfile
@@ -3,3 +3,6 @@
 FROM 100hellos/000-base:local
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
