--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -8,3 +8,6 @@ RUN sudo \
     php
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
