Enable fraglets with ADA
This was also the first pass of a "implement the next language" along
with tweaks for the approach. We'll see how the next one goes
(autonomously).

--- a/ada/Dockerfile
+++ b/ada/Dockerfile
@@ -8,3 +8,6 @@ RUN sudo \
     musl-dev
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
