Enable Ballerina Fraglets

--- a/ballerina/Dockerfile
+++ b/ballerina/Dockerfile
@@ -5,3 +5,6 @@ FROM 100hellos/080-java8:local
 RUN bash -c "source /home/human/.sdkman/bin/sdkman-init.sh && sdk install ballerina"
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
