--- a/bash/Dockerfile
+++ b/bash/Dockerfile
@@ -7,3 +7,6 @@ RUN sudo \
     bash
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
