--- a/bqn/Dockerfile
+++ b/bqn/Dockerfile
@@ -18,3 +18,6 @@ RUN cd /tmp && \
     rm -rf /tmp/CBQN
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
