--- a/clojure/Dockerfile
+++ b/clojure/Dockerfile
@@ -7,3 +7,6 @@ RUN sudo \
     clojure
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
