--- a/dash/Dockerfile
+++ b/dash/Dockerfile
@@ -7,3 +7,6 @@ RUN sudo \
     dash
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
