--- a/deno/Dockerfile
+++ b/deno/Dockerfile
@@ -8,3 +8,6 @@ RUN sudo apk add --no-cache deno
 
 # NO CMD HERE!
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
