--- a/elm/Dockerfile
+++ b/elm/Dockerfile
@@ -10,3 +10,8 @@ RUN sudo npm install -g elm
 
 # Copy the hello-world files
 COPY --chown=human:human ./files /hello-world
+
+# Copy fraglet directory
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
