--- a/forth/Dockerfile
+++ b/forth/Dockerfile
@@ -14,3 +14,6 @@ COPY --chown=human:human ./artifacts /artifacts
 RUN cd /artifacts && make install
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
