--- a/fsharp/Dockerfile
+++ b/fsharp/Dockerfile
@@ -3,3 +3,6 @@
 FROM 100hellos/200-dotnet:local
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
