--- a/golang/Dockerfile
+++ b/golang/Dockerfile
@@ -7,3 +7,6 @@ COPY --from=golang:1.21-alpine /usr/local/go/ /usr/local/go/
 ENV PATH="/usr/local/go/bin:${PATH}"
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
