Haskell supports fragments

--- a/haskell/Dockerfile
+++ b/haskell/Dockerfile
@@ -5,3 +5,6 @@ RUN sudo \
     ghc
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
