--- a/mksh/Dockerfile
+++ b/mksh/Dockerfile
@@ -7,3 +7,6 @@ RUN sudo \
     mksh
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
