--- a/nim/Dockerfile
+++ b/nim/Dockerfile
@@ -5,3 +5,6 @@ FROM 100hellos/000-base:local
 RUN sudo apk add --no-cache nim gcc musl-dev
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
