--- a/pascal/Dockerfile
+++ b/pascal/Dockerfile
@@ -1,10 +1,9 @@
 FROM 100hellos/050-c:local
 
-# RUN sudo \
-#  apk add --no-cache \
-#    fpc
-
 COPY --chown=human:human ./artifacts /artifacts
 RUN cd /artifacts && make install
 ENV PATH=/home/human/.local/bin:$PATH
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
