--- a/picolisp/Dockerfile
+++ b/picolisp/Dockerfile
@@ -11,3 +11,6 @@ RUN sudo apk update
 RUN sudo apk add --no-cache picolisp
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
