Raku supports fragments

--- a/raku/Dockerfile
+++ b/raku/Dockerfile
@@ -10,3 +10,6 @@ RUN sudo \
     zef
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
