--- a/rust/Dockerfile
+++ b/rust/Dockerfile
@@ -8,3 +8,6 @@ RUN \
     rust
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
