Scheme supports fragments

--- a/scheme/Dockerfile
+++ b/scheme/Dockerfile
@@ -6,3 +6,6 @@ FROM 100hellos/000-base:local
 RUN sudo apk add --no-cache chibi-scheme
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
