--- a/verilog/Dockerfile
+++ b/verilog/Dockerfile
@@ -7,3 +7,6 @@ RUN sudo \
     iverilog
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
