vlang supports fragments
Seeing this transpilation technique again makes my heart warm.

--- a/vlang/Dockerfile
+++ b/vlang/Dockerfile
@@ -13,3 +13,6 @@ RUN sudo \
     vlang
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
