wat supports fragments now

--- a/wat/Dockerfile
+++ b/wat/Dockerfile
@@ -9,3 +9,6 @@ RUN sudo \
     wasmtime
 
 COPY --chown=human:human ./files /hello-world
+COPY --chown=human:human ./fraglet /
+
+ENTRYPOINT [ "/fraglet-entrypoint" ]
